<resources>
    <string name="app_name">AndroidLabs Lab 4</string>
    <string name="hello_message">Hello_World</string>
    <string name="button_text">I am a button</string>
    <string name="toast_message">Here is more Information</string>
    <string name="Lab2">Lab 2 GUI </string>
    <string name="click">CLICK HERE </string>
    <string name="check">Check this out</string>
    <string name="switchOn"> switch on/off</string>
    <string name="enter_here">Enter Name Here</string>
    <string name="onswitch"> The switch is now on</string>
    <string name="main_activity"> Main Activity</string>
    <string name="email">Enter Your email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="picture">Take picture</string>
    <string name="your_profile">Your profile</string>
    <string name="name">Enter your name</string>
    <string name="address">Address</string>
    <string name="save_data">SAVE DATA</string>
    <string name="clear_data">CLEAR DATA</string>
</resources>